# kingme

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.vercel/: project.json
apps/arena-runner/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/arena-runner/profiles/: anthropic-claude-haiku.json  openai-gpt-4o-mini.json  openai-gpt-5.4-mini.json
apps/arena-runner/src/: cli.ts  config.ts  engineClient.ts  persistence.ts  runner.ts
apps/engine-api/: .env.example  README.md  modal_app.py  pyproject.toml
apps/engine-api/agents/: masaki.json  rookie.json  sinza-pulse.json  sinza-rookie.json  sinza-street.json  sinza.json  sinza.local.example.json  street.json  tabata.json
apps/engine-api/src/kingme_engine_api/: __init__.py  api.py  main.py  registry.py  schemas.py  service.py  settings.py
apps/engine-api/src/kingme_engine_api/runtime/: __init__.py  agents.py  alphabeta.py  device.py  engine.py  model.py
apps/engine-api/src/kingme_engine_api/runtime/checkers_v2/: __init__.py  action_encoding.py  rules.py  runtime.py  state.py
apps/engine-api/tests/: test_api.py  test_tanzanian_rules.py
apps/web/: .gitignore  README.md  next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: agents.ts  (+3 more)
convex/: README.md  agents.ts  arenaAdmin.ts  arenaMatches.ts  arenaPlies.ts  arenaPublic.ts  arenaValidators.ts  crons.ts  games.ts  players.ts  rateLimits.ts  schema.ts
convex/_generated/: api.d.ts
docs/: API.md  architecture.md  engine.md  llm-arena-roadmap.md
(+20 files in other folders)
