[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingme-engine-api"
version = "0.1.0"
description = "Serving-only Python engine API for kingme"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "torch>=2.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/kingme_engine_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

